# MICROSCOPE01

./: CMakeLists.txt  README.md  package.xml
DOC/schema/: README.md
DOC/src/: MOTOR1
DOC/src/3Dprint/: X-axis0.scad  X-axis1.scad
DOC/src/img/: schematics.dia
arom/launch/: mikroskop.launch
arom/src/: .microscope.swp  MOTOR1  MOTOR1.magnet.feature.hbs  microscope  microscope.feature.hbs
cad/amf/: Flexible_Coupling_Plate_Rotation.stl  Flexible_Coupling_Y-axis.stl  Flexible_Coupling_param2x.stl  Plate_rotation-motor_holder.stl  Redukce+Spojka(osaX).stl  TestOsyX.stl  X_axis.stl  Y_axis.stl  Z_axis.stl  omega_axis.stl
cad/gcode/: CFDMP_Flexible_Coupling_Plate_Rotation.gcode  CFDMP_Flexible_Coupling_Y-axis.gcode  CFDMP_Flexible_Coupling_param2x.gcode  CFDMP_TestOsyX.gcode
cad/src/: Flexible_Coupling_Plate_Rotation.scad  Flexible_Coupling_Y-axis.scad  Flexible_Coupling_param2x.scad  Plate_rotation-motor_holder.scad  Redukce+Spojka(osaX).scad  RedukceNaSpojku(osaX).scad  RedukceNaSpojku.scad  TestOsyX.scad  X_axis.scad  Y_axis.scad  Z_axis.scad  omega_axis.scad  test_osaX.scad
msg/: microscope_magnet.msg  microscope_motor.msg  microscope_motor_move.msg  state_microscope_magnet.msg  state_microscope_motor.msg
